Complete About Part

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <header class="site-header">
     <nav class="nav container" aria-label="Primary">
-      <a class="brand" href="#top">YourName</a>
+      <a class="brand" href="#top">Zhuohang Li</a>
 
       <button class="nav-toggle" aria-expanded="false" aria-controls="nav-links">
         Menu
@@ -36,9 +36,11 @@
     <section id="top" class="section hero">
       <div class="container hero-grid">
         <div>
-          <h1>Hi, I’m <span class="accent">Your Name</span>.</h1>
+          <h1>Hi, I’m <span class="accent">Zhuohang Li</span>.</h1>
           <p class="lead">
-            Short intro here. Example: CMU student interested in statistics, ML, and systems.
+            I am a CMU undergraduate student, graduate at 2027. <br>
+            I focus on Statistics and Machine Learning (major) and Computer Science (minor) <br>
+            My hobbies: Western and Eastern Astrology, Singing, Hiking
           </p>
           <div class="hero-actions">
             <a class="button" href="#projects">View Projects</a>
@@ -56,8 +58,6 @@
           />
           <div class="hero-card-text">
             <p><strong>Location:</strong> Pittsburgh, PA</p>
-            <p><strong>Focus:</strong> Portfolio for CMU 15-113</p>
-          </div>
         </div>
       </div>
     </section>
@@ -67,8 +67,8 @@
       <div class="container">
         <h2>About</h2>
         <p>
-          Write a short bio here. Keep it personal and engaging:
-          what you study, what you care about, what you’re learning.
+          I am a CMU undergraduate student, graduate at 2027. My major is Statistics 
+          and Machine Learning and my minor is Computer Science.
         </p>
 
         <div class="two-col">
@@ -78,19 +78,74 @@
               <li>Machine Learning</li>
               <li>Systems Programming</li>
               <li>Data Visualization</li>
+              <li>Coding with AI</li>
+              <li>Modren Regression</li>
+              <li>Data Analysis</li>
+              <li>Human-Computer Interaction</li>
             </ul>
           </div>
 
           <div class="card">
             <h3>Skills</h3>
+
             <ul class="tags">
               <li>Python</li>
               <li>C</li>
               <li>R</li>
-              <li>Git/GitHub</li>
+              <li>SML</li>
+              <li>Coding with AI</li>
+              <li>System operation</li>
+              <li>Data processing</li>
+              <li>Data visualization</li>
+              <li>Data Analysis</li>
             </ul>
           </div>
+
         </div>
+
+        <div class="card" style="margin-top: 16px;">
+            <h3>Relevant Coursework</h3>
+
+            <ul class="course-list">
+              <li class="course-category">
+                Computer Science
+                <ul>
+                  <li>15-112: Fundamentals of Programming</li>
+                  <li>15-113: Effective Coding with AI </li>
+                  <li>15-122: Principles of Imperative Computation</li>
+                  <li>15-150: Functional Programming</li>
+                  <li>15-213: Introduction to Computer Systems</li>
+                  <li>10-301: Introduction to Machine Learning</li>
+                  <li>05-391: Designing Human-Centered Software</li>
+                </ul>
+              </li>
+
+              <li class="course-category">
+                Statistics
+                <ul>
+                  <li>36-235: Probability and Statistical Inference I</li>
+                  <li>36-236: Probability and Statistical Inference II</li>
+                  <li>36-315: Statistical Graphics and Visualization</li>
+                  <li>36-350: Statistical Computing</li>
+                  <li>36-401: Modern Regression</li>
+                  <li>36-402: Advanced Data Analysis</li>
+                  <li>36-462: Statistical Machine Learning</li>
+                </ul>
+              </li>
+
+              <li class="course-category">
+                Mathematics
+                <ul>
+                  <li>21-120: Differential and Integral Calculus</li>
+                  <li>21-122: Integration and Approximation</li>
+                  <li>21-127: Concepts of Math</li>
+                  <li>21-241: Matrices and Linear Transformations</li>
+                  <li>21-256: Multivariate Analysis</li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+
       </div>
     </section>
 
@@ -123,28 +178,21 @@
             </div>
           </article>
 
-          <!-- Placeholder projects -->
           <article class="card project">
             <div class="project-media placeholder">
-              <span>Screenshot</span>
+              <span>Coming Soon</span>
             </div>
-            <h3>Future Project #1</h3>
-            <p>Short description of what this project will be.</p>
+            <h3>More Projects Coming</h3>
+            <p>
+              I will continue adding course projects and personal work to this
+              portfolio throughout the semester.
+            </p>
             <div class="project-links">
-              <span class="muted">Coming soon</span>
+              <span class="muted">In progress</span>
             </div>
           </article>
 
-          <article class="card project">
-            <div class="project-media placeholder">
-              <span>Screenshot</span>
-            </div>
-            <h3>Future Project #2</h3>
-            <p>Short description of what this project will be.</p>
-            <div class="project-links">
-              <span class="muted">Coming soon</span>
-            </div>
-          </article>
+
         </div>
       </div>
     </section>
@@ -158,8 +206,8 @@
         <div class="two-col">
           <div class="card">
             <ul class="contact-list">
-              <li><strong>Email:</strong> <a href="mailto:you@example.com">you@example.com</a></li>
-              <li><strong>GitHub:</strong> <a href="#" target="_blank" rel="noreferrer">github.com/yourname</a></li>
+              <li><strong>Email:</strong> <a href="mailto:zhuohang@andrew.cmu.edu">zhuohang@andrew.cmu.edu</a></li>
+              <li><strong>GitHub:</strong> <a href="#" target="_blank" rel="noreferrer">github.com/KhianKhun</a></li>
               <li><strong>LinkedIn:</strong> <a href="#" target="_blank" rel="noreferrer">linkedin.com/in/yourname</a></li>
             </ul>
           </div>
@@ -194,7 +242,7 @@
 
         <footer class="site-footer">
           <p class="muted">
-            © <span id="year"></span> Your Name. Built for CMU 15-113.
+            © <span id="year"></span> Zhuohang Li. Built for CMU 15-113.
           </p>
           <p class="muted">
             Credits: Replace with image/template attributions if you use any.
