complete Contact selection

--- a/index.html
+++ b/index.html
@@ -229,7 +229,10 @@
           <div class="card">
             <ul class="contact-list">
               <li><strong>Email:</strong> <a href="mailto:zhuohang@andrew.cmu.edu">zhuohang@andrew.cmu.edu</a></li>
-              <li><strong>GitHub:</strong> <a href="#" target="_blank" rel="noreferrer">github.com/KhianKhun</a></li>
+              <li><strong>GitHub:</strong> <a href="https://github.com/KhianKhun" 
+                target="_blank" rel="noreferrer">github.com/KhianKhun</a></li>
+              <li><strong>Instagram:</strong> <a href="https://www.instagram.com/zhouhanggg/" 
+                target="_blank" rel="noreferrer">@zhuohanggg</a></li>
             </ul>
           </div>  
 
@@ -238,7 +241,7 @@
             © <span id="year"></span> Zhuohang Li. Built for myself and CMU 15-113.
           </p>
           <p class="muted">
-            Credits: Replace with image/template attributions if you use any.
+            Credits: None.
           </p>
         </footer>
       </div>
