update a back-to-top button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="styles.css" >
 </head>
 
+<button id="backToTop" aria-label="Back to top">
+  ↑
+</button>
+
+
 <body>
   <div id="toast" class="toast" role="status" aria-live="polite" aria-atomic="true"></div>
   <a class="skip-link" href="#main">Skip to content</a>
