--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Your Name | Portfolio</title>
+  <title>Zhuohang Li | Portfolio</title>
   <meta name="description" content="Personal portfolio website." />
-  <link rel="stylesheet" href="styles.css" >
+  <link rel="stylesheet" href="./styles.css" >
+  <script src="./script.js" defer></script>
 </head>
 
 <button id="backToTop" aria-label="Back to top">
