--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
           <!-- Replace with your own image in assets/ -->
           <img
             id="heroImage"
-            src="assets/profile_true.jpg"
-            data-alt-src="assets/profile.jpg"
+            src="assets/profile.jpg"
+            data-alt-src="assets/profile_true.jpg"
             alt="Portrait of Zhuohang Li (click to switch)"
             class="avatar"
             onerror="this.style.display='none'"
