add hw2 slection

--- a/index.html
+++ b/index.html
@@ -242,6 +242,33 @@
             </div>
           </article>
 
+          <!-- Project 3: NEW PROJECT (with GitHub button) -->
+          <article class="card project">
+            <div class="project-media">
+              <img
+                src="assets/new_project.png"
+                alt="Screenshot placeholder for new project"
+                onerror="this.style.display='none'"
+              />
+            </div>
+
+            <h3>New Project Title</h3>
+            <p>
+              Brief description of your new project. Explain what it does, what tech you used,
+              and what you learned.
+            </p>
+
+            <div class="project-links">
+              <a class="link"
+                href="https://github.com/KhianKhun/15113-hw2-crossy-road"
+                target="_blank"
+                rel="noreferrer">
+                GitHub
+              </a>
+            </div>
+          </article>
+
+
           <article class="card project">
             <div class="project-media placeholder">
               <span>Coming Soon</span>
