update project part

--- a/index.html
+++ b/index.html
@@ -246,16 +246,20 @@
           <article class="card project">
             <div class="project-media">
               <img
-                src="assets/new_project.png"
+                src="assets/15113_hw2.png"
                 alt="Screenshot placeholder for new project"
                 onerror="this.style.display='none'"
               />
             </div>
 
-            <h3>New Project Title</h3>
+            <h3>One hour coding with AI to copy Crossy Road</h3>
             <p>
-              Brief description of your new project. Explain what it does, what tech you used,
-              and what you learned.
+              This is time restricted project. The goal is to create a game 
+              based on game Crossy Road with AI help within one hour. In 
+              one-hour coding, I achieve basic game skeleton and suitable game 
+              UI and UX. The operation method is using left, right, up, and down
+              button on keyboad to move, using p to resume or pasue, and using
+              r to restart.
             </p>
 
             <div class="project-links">
