--- a/index.html
+++ b/index.html
@@ -272,6 +272,36 @@
             </div>
           </article>
 
+          <!-- Project 4: API Assignment -->
+          <article class="card project">
+            <div class="project-media">
+              <img
+                src="assets/api_project.png"
+                alt="Screenshot placeholder for API assignment"
+                onerror="this.style.display='none'"
+              />
+            </div>
+            <h3>API Assignment</h3>
+            <p>
+              A Python-based weather application that integrates the U.S. 
+              National Weather Service API. Users can select locations to 
+              retrieve official weather forecasts and real-time conditions.
+              The project focuses on API integration, data parsing, and 
+              presenting location-based weather information in an interactive 
+              interface.
+            </p>
+            <div class="project-links">
+              <a
+                class="link"
+                href="https://github.com/KhianKhun/15113-hw3-Explore-an-API"
+                target="_blank"
+                rel="noreferrer"
+              >
+                GitHub
+              </a>
+            </div>
+          </article>
+
 
           <article class="card project">
             <div class="project-media placeholder">
