--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
           <article class="card project">
             <div class="project-media">
               <img
-                src="assets/api_project.png"
+                src="assets/15113_hw3.png"
                 alt="Screenshot placeholder for API assignment"
                 onerror="this.style.display='none'"
               />
