--- a/index.html
+++ b/index.html
@@ -254,12 +254,15 @@
 
             <h3>One hour coding with AI to copy Crossy Road</h3>
             <p>
-              This is time restricted project. The goal is to create a game 
-              based on game Crossy Road with AI help within one hour. In 
-              one-hour coding, I achieve basic game skeleton and suitable game 
-              UI and UX. The operation method is using left, right, up, and down
-              button on keyboad to move, using p to resume or pasue, and using
-              r to restart.
+              This is a full-stack Gomoku (Five-in-a-Row) web application that 
+              integrates an AI-powered opponent using a large language model API
+              (gpt-4o-mini). 
+              The project includes a Flask-based backend deployed on Render and 
+              a static frontend hosted via GitHub Pages. Players compete against 
+              the AI on a dynamic board interface, where each move is validated 
+              on the server to ensure legal gameplay. The application demonstrates 
+              API integration, backend–frontend communication, and real-time game 
+              state management in a production deployment environment.
             </p>
 
             <div class="project-links">
@@ -294,6 +297,37 @@
               <a
                 class="link"
                 href="https://github.com/KhianKhun/15113-hw3-Explore-an-API"
+                target="_blank"
+                rel="noreferrer"
+              >
+                GitHub
+              </a>
+            </div>
+          </article>
+
+          <!-- Project 5: Frontend + Backend -->
+          <article class="card project">
+            <div class="project-media">
+              <img
+                src="assets/15113_hw4.png"
+                alt="Screenshot placeholder for Frontend and Backend assignment"
+                onerror="this.style.display='none'"
+              />
+            </div>
+            <h3>API Assignment</h3>
+            <p>
+              A website application implementing the Gomuku game. The  
+              A Python-based weather application that integrates the U.S. 
+              National Weather Service API. Users can select locations to 
+              retrieve official weather forecasts and real-time conditions.
+              The project focuses on API integration, data parsing, and 
+              presenting location-based weather information in an interactive 
+              interface.
+            </p>
+            <div class="project-links">
+              <a
+                class="link"
+                href="https://khiankhun.github.io/15113-hw4-Frontend-gomoku/"
                 target="_blank"
                 rel="noreferrer"
               >
