--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
               />
             </div>
 
-            <h3>One hour coding with AI to copy Crossy Road</h3>
+            <h3>Front and Backend Implement</h3>
             <p>
               This is a full-stack Gomoku (Five-in-a-Row) web application that 
               integrates an AI-powered opponent using a large language model API
