--- a/index.html
+++ b/index.html
@@ -307,21 +307,21 @@
             <div class="project-media">
               <img
                 src="assets/15113_hw4.png"
+                class = "hw4-thumb"
                 alt="Screenshot placeholder for Frontend and Backend assignment"
                 onerror="this.style.display='none'"
               />
             </div>
             <h3>Front and Backend Implement</h3>
             <p>
-               This is a full-stack Gomoku (Five-in-a-Row) web application that 
+              This is a full-stack Gomoku (Five-in-a-Row) web application that 
               integrates an AI-powered opponent using a large language model API
               (gpt-4o-mini). 
               The project includes a Flask-based backend deployed on Render and 
               a static frontend hosted via GitHub Pages. Players compete against 
-              the AI on a dynamic board interface, where each move is validated 
-              on the server to ensure legal gameplay. The application demonstrates 
-              API integration, backend–frontend communication, and real-time game 
-              state management in a production deployment environment.
+              the AI on a dynamic board interface. The application demonstrates 
+              API integration, backend–frontend communication in a production 
+              deployment environment.
             </p>
             <div class="project-links">
               <a
