--- a/index.html
+++ b/index.html
@@ -314,19 +314,47 @@
             </div>
             <h3>Front and Backend Implement</h3>
             <p>
-              This is a full-stack Gomoku (Five-in-a-Row) web application that 
-              integrates an AI-powered opponent using a large language model API
-              (gpt-4o-mini). 
-              The project includes a Flask-based backend deployed on Render and 
-              a static frontend hosted via GitHub Pages. Players compete against 
-              the AI on a dynamic board interface. The application demonstrates 
-              API integration, backend–frontend communication in a production 
-              deployment environment.
+              A web-based data analysis platform inspired by R. Users can upload 
+              datasets, clean and transform data, generate visualizations, and 
+              perform basic statistical modeling. The backend securely processes 
+              all operations through a controlled, UI-driven analysis pipeline.
             </p>
             <div class="project-links">
               <a
                 class="link"
                 href="https://khiankhun.github.io/15113-hw4-Frontend-gomoku/"
+                target="_blank"
+                rel="noreferrer"
+              >
+                GitHub
+              </a>
+            </div>
+          </article>
+
+          <!-- Project 6: Data studio -->
+          <article class="card project">
+            <div class="project-media">
+              <img
+                src="assets/15113_project2.png"
+                alt="Screenshot placeholder for Project 2 assignment"
+                onerror="this.style.display='none'"
+              />
+            </div>
+            <h3>Data Studio</h3>
+            <p>
+              A web-based Data Analysis Studio inspired by R. Users can upload 
+              their own datasets, interactively clean and transform data, and 
+              generate visualizations directly in the browser. The platform supports 
+              operations such as filtering, handling missing values, creating 
+              new variables, and performing simple modeling, all through an 
+              intuitive UI-driven workflow. The backend securely processes data 
+              transformations, while the frontend provides dynamic previews and 
+              analysis tools for an interactive data exploration experience.
+            </p>
+            <div class="project-links">
+              <a
+                class="link"
+                href="https://khiankhun.github.io/15113-project2-R-Frontend/"
                 target="_blank"
                 rel="noreferrer"
               >
